@@ -4,9 +4,11 @@ pipeline {
             label 'maven'
         }
     }
-environment {
-    PATH = "/opt/maven/apache-maven-3.9.6/bin:$PATH"
-}
+    environment {
+        PATH = "/opt/maven/apache-maven-3.9.6/bin:$PATH"
+        MAVEN_OPTS = "-Xmx512m -XX:MaxPermSize=128m"
+        SONAR_SCANNER_OPTS = "-Xmx512m"
+    }
 
     stages {
         stage("build"){
@@ -15,15 +17,19 @@ environment {
             }
         }
         stage("SonarQube analysis"){
-
-        environment {
-            scannerHome = tool 'arunim-sonar-scanner'
+            environment {
+                scannerHome = tool 'arunim-sonar-scanner'
             }
-        steps{
-            withSonarQubeEnv('arunim-sonarqube-server') { 
-            sh "${scannerHome}/bin/sonar-scanner"
-        }    
+            steps{
+                withSonarQubeEnv('arunim-sonarqube-server') { 
+                    sh "${scannerHome}/bin/sonar-scanner"
+                }    
+            }
         }
     }
-}
+    post {
+        always {
+            cleanWs()
+        }
+    }
 }
